2011-03-09 mmichaud <michael.michaud@free.fr>
    * com.vividsolutions.jump.workbench.ui.renderer.style.ColorThemingStylePanel
      bugs 3091363 and 3043312 partially adressed

2011-03-07 mmichaud <michael.michaud@free.fr>
    * org.openjump.core.ui.plugin.tools.statistics.ClassifyAttributesPlugIn
      fix bug ID 3104103 and add option to deal with null values

2011-03-06 mmichaud <michael.michaud@free.fr>
    * com.vividsolutions.jump.workbench.ui.renderer.style.WKTRendererjava2DJava2DConverter
      com.vividsolutions.jump.workbench.ui.zoom.ZoomBar
      Bug fix (implements new Java2DConverter.PointConverter interface

2011-03-05 mmichaud <michael.michaud@free.fr>
    * com.vividsolutions.jump.workbench.ui.renderer.java2DConverter
      optimisation of LineString drawing (skip segments out of the viewPort)

2011-03-05 mmichaud <michael.michaud@free.fr>
    * added SaveDatasets plugin in the ToolBar (following Peppe's suggestion)

2011-02-22 mmichaud <michael.michaud@free.fr>
    * fixed bug 3178207, com.vividsolutions.jump.workbench.ui.AttributePanel
      delete key does not delete a feature being edited any more

2011-02-23 Matthias Scholz <ms@jammerhund.de>
	* Changes for a better presentation of attribute values. Now Date, Double
	  and Integer attributes will be formatted with the default loacle settings.
	  Changes in:
		* com.vividsolutions.jump.workbench.ui.renderer.style.LabelStyle.paint(Feature f, Graphics2D g, Viewport viewport)
		* com.vividsolutions.jump.workbench.ui.style.LabelStylePanel.sampleText()

2011-02-22 mmichaud <michael.michaud@free.fr>
    * removed unused com.sun.corba.se.impl.protocol.giopmsgheaders.KeyAddr
    * removed unused com.sun.org.apache.xerces.internal.impl.dv.xs.DecimalDV
      in com.vividsolutions.jump.workbench.ui.plugin.clipboard.PasteItemsPlugIn
	* removed a sun proprietary code dependency in 
	  com.vividsolutions.jump.workbench.imagery.graphic.GraphicImage